--- a/08-rails/review/23-forms-and-associations/app/views/posts/index.html.erb
+++ b/08-rails/review/23-forms-and-associations/app/views/posts/index.html.erb
@@ -1,4 +1,12 @@
 <h1>Posts list</h1>
 
+<ul>
+	<% @posts.each do |post| %>
+		<li>
+			<strong><%= post.title %></strong><br>
+			<span><%= post.content %></span>
+		</li>
+	<% end %>
+</ul>
 <br>
 <%= link_to 'Create post', new_post_path %>
