--- a/08-rails/review/23-forms-and-associations/app/views/posts/show.html.erb
+++ b/08-rails/review/23-forms-and-associations/app/views/posts/show.html.erb
@@ -1,5 +1,8 @@
 <h1>Post</h1>
 
+<p><%= @post.title %></p>
+<p><%= @post.content %></p>
 
 <br>
+<%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
