allow users to set catagory without knowing id

--- a/08-rails/review/23-forms-and-associations/app/views/posts/_form.html.erb
+++ b/08-rails/review/23-forms-and-associations/app/views/posts/_form.html.erb
@@ -15,10 +15,10 @@
 	<%= f.text_field :title %><br><br>
 
 	<%= f.label :content, 'Content' %>
-	<%= f.text_field :content %><br><br>
+	<%= f.text_area :content %><br><br>
 
-	<%= f.label :category_id, 'Category' %>
-	<%= f.text_field :category_id %><br><br>
+	<%= f.label :category_name, 'Category' %>
+	<%= f.text_field :category_name %><br><br>
 
 	<%= f.submit %>
 <% end %>
