display a list of categories

--- a/08-rails/review/23-forms-and-associations/app/views/posts/index.html.erb
+++ b/08-rails/review/23-forms-and-associations/app/views/posts/index.html.erb
@@ -9,4 +9,5 @@
 	<% end %>
 </ul>
 <br>
-<%= link_to 'Create post', new_post_path %>
+<%= link_to 'Create post', new_post_path %> |
+<%= link_to 'Categories', categories_path %>
