allow users to select the category from a dowp down list

--- a/08-rails/review/23-forms-and-associations/app/views/categories/index.html.erb
+++ b/08-rails/review/23-forms-and-associations/app/views/categories/index.html.erb
@@ -2,3 +2,6 @@
 <% @categories.each do |category| %>
 	<span><%= category.name %></span>&nbsp;
 <% end %>
+
+<br><br>
+<%= link_to 'Back', posts_path %>
