impl song methods, song specs passing

--- a/08-rails/review/24-forms-and-basic-associations-rails-lab/app/views/songs/new.html.erb
+++ b/08-rails/review/24-forms-and-basic-associations-rails-lab/app/views/songs/new.html.erb
@@ -5,6 +5,15 @@
   <%= f.text_field :title %>
   <br />
 
+	<!--text input for artist-->
+
+
+	<!--drop down selection for genres-->
+
+
+	<!--add some text input fields to add notes-->
+
+
   <%= f.submit %>
 <% end %>
 
