--- a/08-rails/review/21-30/24-forms-and-basic-associations-rails-lab/app/views/songs/new.html.erb
+++ b/08-rails/review/21-30/24-forms-and-basic-associations-rails-lab/app/views/songs/new.html.erb
@@ -3,16 +3,21 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
+  <br /><br>
 
 	<!--text input for artist-->
-
+	<%= f.label :artist_name, 'Artist name' %>
+	<%= f.text_field :artist_name %>
+	<br><br>
 
 	<!--drop down selection for genres-->
-
+	<%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
 	<!--add some text input fields to add notes-->
-
+	<h3>Add a note:</h3>
+	<input name="song[note_contents][]" id="song_notes_1"><br><br>
+	<input name="song[note_contents][]" id="song_notes_2"><br><br>
+	<input name="song[note_contents][]" id="song_notes_3"><br><br>
 
   <%= f.submit %>
 <% end %>
