add the ability for users to select categories from those in the database via checkbox

--- a/08-rails/review/21-30/29-has-many-through-with-forms-demo/app/views/posts/_form.html.erb
+++ b/08-rails/review/21-30/29-has-many-through-with-forms-demo/app/views/posts/_form.html.erb
@@ -5,5 +5,8 @@
 	<%= f.label :content %>
 	<%= f.text_field :content %><br><br>
 
+	<!--create a checkbox field for each Category in our database-->
+	<%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br><br>
+
 	<%= f.submit %>
 <% end %>
