give users the ability to define new categories via accepts_nested_attributes_for method

--- a/08-rails/review/21-30/29-has-many-through-with-forms-demo/app/views/posts/_form.html.erb
+++ b/08-rails/review/21-30/29-has-many-through-with-forms-demo/app/views/posts/_form.html.erb
@@ -5,8 +5,15 @@
 	<%= f.label :content %>
 	<%= f.text_field :content %><br><br>
 
+	<h4>Select a category:</h4>
 	<!--create a checkbox field for each Category in our database-->
-	<%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br><br>
+	<%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br>
+
+	<!--allow users to create new categories-->
+	<h4>Define a new category</h4>
+	<%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+		<%= categories_fields.text_field :name %>
+	<% end %><br><br>
 
 	<%= f.submit %>
 <% end %>
