--- a/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/users/show.html.erb
+++ b/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
+<h2><%= @user.username %></h2>
 
+<h3>All of the posts I've commented on:</h3>
+<% @user.posts.each do |post| %>
+	<p><%= link_to post.title, post_path(post) %></p>
+<% end %>
