allow users to add a category to a post, both new and existing

--- a/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/posts/show.html.erb
+++ b/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/posts/show.html.erb
@@ -1,5 +1,14 @@
 <h2><%= @post.title %></h2>
 <p><%= @post.content %></p>
 
+<h3>Categories:</h3>
+<% if @post.categories.count > 0 %>
+	<div>
+		<% @post.categories.each do |category| %>
+			<span><%= category.name %></span>&nbsp;
+		<% end %>
+	</div>
+<% end %>
+
 <br>
 <%= link_to 'Back', posts_path %>
