--- a/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/posts/_form.html.erb
+++ b/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/posts/_form.html.erb
@@ -5,5 +5,15 @@
 	<%= f.label :content %>
 	<%= f.text_field :content %><br><br>
 
+	<h4>Add a category:</h4>
+
+	<!--create a checkbox for each category in the database-->
+	<%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br><br>
+
+	<!--create new categories-->
+	<%= f.fields_for :categories, post.categories.build do |categories_field|  %>
+		<%= categories_field.text_field :name %>
+	<% end %><br><br>
+
 	<%= f.submit %>
 <% end %>
