allow users to comment on posts

--- a/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/posts/_form.html.erb
+++ b/08-rails/review/21-30/30-has-many-through-forms-rails-lab/app/views/posts/_form.html.erb
@@ -2,8 +2,8 @@
 	<%= f.label :title %>
 	<%= f.text_field :title %><br><br>
 
-	<%= f.label :content %>
-	<%= f.text_field :content %><br><br>
+	<%= f.label :content %><br>
+	<%= f.text_area :content %><br><br>
 
 	<h3>Add a category:</h3>
 
