--- a/08-rails/review/31-40/31-rails-blog-nested-forms/app/views/posts/index.html.erb
+++ b/08-rails/review/31-40/31-rails-blog-nested-forms/app/views/posts/index.html.erb
@@ -1,10 +1,14 @@
-<h1>Listing posts</h1>
+<h1>Posts listing</h1>
 
     <% @posts.each do |post| %>
-        <h2><%= link_to post.name, post %></h2>
-        <p><%= link_to 'Edit', edit_post_path(post) %></p>
-        <p><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+        <p>
+					<%= link_to post.name, post %>&nbsp;
+					<%= link_to 'Edit', edit_post_path(post) %> |
+					<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+				</p>
     <% end %>
 
 <br>
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'Create Post', new_post_path %> |
+<%= link_to 'View tags', tags_path %> |
+<%= link_to 'View users', users_path %>
