--- a/08-rails/review/31-40/31-rails-blog-nested-forms/app/views/tags/index.html.erb
+++ b/08-rails/review/31-40/31-rails-blog-nested-forms/app/views/tags/index.html.erb
@@ -6,4 +6,6 @@
   </ul>
 <br>
 
-<%= link_to 'New Tag', new_tag_path %>
+<%= link_to 'New Tag', new_tag_path %> |
+<%= link_to 'View posts', posts_path %> |
+<%= link_to 'View users', users_path %>
