--- a/08-rails/review/31-40/31-rails-blog-nested-forms/app/views/users/index.html.erb
+++ b/08-rails/review/31-40/31-rails-blog-nested-forms/app/views/users/index.html.erb
@@ -4,4 +4,6 @@
         <h2> <%= link_to user.name, user %> </h2>
     <% end %>
 <br>
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path %> |
+<%= link_to 'View posts', posts_path %> |
+<%= link_to 'View tags', tags_path %>
