--- a/08-rails/review/31-40/33-layouts-partials-demo/app/views/layouts/application.html.erb
+++ b/08-rails/review/31-40/33-layouts-partials-demo/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsBddDemo</title>
+    <title>Default Layout</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <h1>Flatiron Widgets Store</h1>
     <%= yield %>
   </body>
 </html>
