refactor views and partials

--- a/08-rails/review/31-40/34-simple-partials-reading-cb-000/app/views/authors/show.html.erb
+++ b/08-rails/review/31-40/34-simple-partials-reading-cb-000/app/views/authors/show.html.erb
@@ -1,1 +1,4 @@
-<%= render partial: 'shared/authors', locals: {author: @author} %>
+<%= render partial: 'authors', locals: {author: @author} %>
+
+<br>
+<%= link_to 'Back', authors_path %>
