--- a/08-rails/review/31-40/34-simple-partials-reading-cb-000/app/views/posts/show.html.erb
+++ b/08-rails/review/31-40/34-simple-partials-reading-cb-000/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
-<%= render partial: 'shared/authors', locals: {author: @author} %>
-
 <h1><%= @post.title %></h1>
 <p><%= @post.description %></p>
+
+<%= render partial: 'authors/authors', locals: {author: @post.author} %>
 
 <br>
 <%= link_to 'Back', posts_path %>
