--- a/08-rails/review/31-40/34-simple-partials-reading-cb-000/app/views/posts/index.html.erb
+++ b/08-rails/review/31-40/34-simple-partials-reading-cb-000/app/views/posts/index.html.erb
@@ -1,3 +1,10 @@
-<% @posts.each do |post| %>
-  <div><%= link_to post.title, post_path(post) %></div>
-<% end %>
+<h1>Posts List</h1>
+
+<ul>
+	<% @posts.each do |post| %>
+		<li><%= link_to post.title, post_path(post) %></li>
+	<% end %>
+</ul>
+
+<br>
+<%= link_to 'Authors', authors_path %>
