impl rails collections with partials

--- a/08-rails/review/31-40/35-partial-locals-lab-cb-000/app/views/classrooms/index.html.erb
+++ b/08-rails/review/31-40/35-partial-locals-lab-cb-000/app/views/classrooms/index.html.erb
@@ -1,9 +1,12 @@
 <h1>Classroom List</h1>
 
 <ul>
-	<% @classrooms.each do |classroom| %>
-		<li><%= link_to classroom.course_name, classroom_path(classroom) %></li>
-	<% end %>
+	<%# @classrooms.each do |classroom| %>
+		<%#= link_to classroom.course_name, classroom_path(classroom) %>
+	<%# end %>
+
+	<%= render(@classrooms) || 'No classrooms found' %>
+
 </ul>
 
 <br>
