--- a/08-rails/review/31-40/38-model-class-methods-reading/app/views/posts/index.html.erb
+++ b/08-rails/review/31-40/38-model-class-methods-reading/app/views/posts/index.html.erb
@@ -1,5 +1,11 @@
 <% if !params[:author].blank? %>
 	<% @posts = Post.where(author: params[:author]) %>
+<% elsif !params[:date].blank? %>
+	<% if params[:date] == "Today" %>
+		<% @posts = Post.where("created_at >=?", Time.zone.today.beginning_of_day) %>
+	<% else %>
+		<% @posts = Post.where("created_at <?", Time.zone.today.beginning_of_day) %>
+	<% end %>
 <% end %>
 
 <h1>Believe It Or Not I'm Blogging On Air</h1>
@@ -7,7 +13,11 @@
 <div>
   <h3>Filter posts:</h3>
   <%= form_tag("/posts", method: "get") do %>
+		<!--select author-->
     <%= select_tag "author", options_from_collection_for_select(Author.all, "id", "name"), include_blank: true %>
+		<!--select day-->
+		<%= select_tag "date", options_for_select(["Today", "Old News"]), include_blank: true %>
+
     <%= submit_tag "Filter" %>
   <% end %>
 </div>
