--- a/08-rails/review/41-50/42-modification-nested-routes-demo/app/views/authors/show.html.erb
+++ b/08-rails/review/41-50/42-modification-nested-routes-demo/app/views/authors/show.html.erb
@@ -1,6 +1,14 @@
 <h1><%= @author.name %></h1>
 
+<%= link_to 'New Post', new_author_post_path(@author) %>
+
 <p>Posts:</p>
 <% @author.posts.each do |post| %>
-  <div><%= post.title %></div>
+  <div>
+		<%= link_to post.title, post_path(post) %>&nbsp;
+		<%= link_to 'Edit', edit_post_path(post) %>
+	</div>
 <% end %>
+
+<br>
+<%= link_to 'All authors', authors_path %>
