--- a/08-rails/review/41-50/42-modification-nested-routes-demo/app/views/posts/show.html.erb
+++ b/08-rails/review/41-50/42-modification-nested-routes-demo/app/views/posts/show.html.erb
@@ -1,3 +1,8 @@
 <h1><%= @post.title %></h1>
-<p>by <%= link_to @post.author.name, author_path(@post.author) if @post.author %> (<%= link_to "Edit Post", edit_post_path(@post) %>)</p>
+<p>by <%= link_to @post.author.name, author_path(@post.author) if @post.author %>
+	(<%= link_to "Edit Post", edit_author_post_path(@post.author, @post) if @post.author %>)</p>
+
 <p><%= @post.description %> </p>
+
+<br>
+<%= link_to 'Back', author_posts_path(@post.author) %>
