improve app navigation by adding various links

--- a/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/artists/index.html.erb
+++ b/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/artists/index.html.erb
@@ -4,3 +4,7 @@
     <li><%= link_to artist.name, artist_songs_path(artist) %></li>
   <% end %>
 </ul>
+
+<br>
+<%= link_to 'Add New Artist', new_artist_path %> |
+<%= link_to 'Songs', songs_path %>
