--- a/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/artists/show.html.erb
+++ b/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/artists/show.html.erb
@@ -4,3 +4,6 @@
     <li><%= link_to song.title, artist_song_path(@artist, song) %></li>
   <% end %>
 </ul>
+
+<br>
+<%= link_to 'Back', artists_path %>
