--- a/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/songs/_form.html.erb
+++ b/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/songs/_form.html.erb
@@ -1,9 +1,12 @@
 <%= form_for song  do |f| %>
+	<%= f.hidden_field :artist_id %>
+
   <%= f.label :title %>
   <%= f.text_field :title %><br>
-  <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
-  <br />
 
+	<%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+
+	<br />
   <%= f.submit %>
 <% end %>
