--- a/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/songs/new.html.erb
+++ b/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/songs/new.html.erb
@@ -1,2 +1,2 @@
 <h1>Create a Song</h1>
-<%= render partial: "form", locals: {song: @song} %>
+<%= render partial: "form", locals: {song: @song, nested: false} %>
