--- a/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/songs/edit.html.erb
+++ b/08-rails/review/41-50/43-modification-nested-routes-lab/app/views/songs/edit.html.erb
@@ -1,2 +1,3 @@
 <h1>Editing <%= @song.title %></h1>
+<!--display artist drop down depending on whether the route is nested-->
 <%= render partial: "form", locals: {song: @song, nested: @nested} %>
