--- a/08-rails/review/41-50/49-has_secure_password_lab/app/views/layouts/application.html.erb
+++ b/08-rails/review/41-50/49-has_secure_password_lab/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!--display flash messages-->
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
