--- a/08-rails/review/41-50/49-has_secure_password_lab/app/views/users/new.html.erb
+++ b/08-rails/review/41-50/49-has_secure_password_lab/app/views/users/new.html.erb
@@ -1,1 +1,18 @@
 <h1>Signup</h1>
+
+<%= form_for @user, {url: users_path, method: 'post'} do |f| %>
+
+	<%= f.label :name %><br>
+	<%= f.text_field :name %><br><br>
+
+	<%= f.label :password %><br>
+	<%= f.text_field :password %><br><br>
+
+	<%= f.label :password_confirmation %><br>
+	<%= f.text_field :password_confirmation %><br><br>
+
+	<%= f.submit 'Signup' %>
+<% end %>
+
+<br>
+<%= link_to 'Login', new_session_path %>
