--- a/08-rails/review/41-50/49-has_secure_password_lab/app/views/users/show.html.erb
+++ b/08-rails/review/41-50/49-has_secure_password_lab/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <h1>Hi <%= @user.name %></h1>
+
+<%= form_for @user, {url: session_path, method: 'delete'} do |f| %>
+	<%= f.submit 'Logout' %>
+<% end %>
