--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/layouts/application.html.erb
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/layouts/application.html.erb
@@ -4,11 +4,15 @@
     <title>DeviseOmniauthRolesDemo</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <%= yield %>
+
   </body>
 </html>
