install bootstrap 3 into the app

--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/layouts/application.html.erb
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/layouts/application.html.erb
@@ -9,10 +9,11 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="container">
+      <p class="alert"><%= alert %></p>
+      <p class="notice"><%= notice %></p>
 
-    <%= yield %>
-
+      <%= yield %>
+    </div>
   </body>
 </html>
