add navbar and style flash messsages with bootstrap

--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/layouts/application.html.erb
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 
   <body>
     <div class="container">
-      <p class="alert"><%= alert %></p>
-      <p class="notice"><%= notice %></p>
+      <%= render 'layouts/navbar' %>
+      <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
     </div>
