--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/assets/stylesheets/base/_grid.scss
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/assets/stylesheets/base/_grid.scss
@@ -6,3 +6,33 @@
   margin: 0;
 }
 
+form {
+
+  div.field {
+    margin-bottom: 20px;
+
+    input[type="text"],
+  input[type="email"],
+  input[type="password"]{
+      height: 35px;
+      width: 100%;
+    }
+  }
+}
+
+
+.container .devise {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 80px;
+
+  input[type="submit"] {
+    margin-bottom: 20px;
+  }
+
+  h2,
+  a {
+    text-align: center;
+  }
+
+}
