--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/devise/registrations/edit.html.erb
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: "btn btn-info btn-block" %>
   </div>
 <% end %>
 
