--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/static/home.html.erb
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/app/views/static/home.html.erb
@@ -1,1 +1,2 @@
 <h1>Welcome!</h1>
+<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
