--- a/08-rails/review/51-60/52-devise_pundit_lab/app/views/layouts/application.html.erb
+++ b/08-rails/review/51-60/52-devise_pundit_lab/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
-<%= yield %>
+  <%= render 'layouts/navigation' %>
+	<%= render 'layouts/flash' %>
+	<%= yield %>
 
 </body>
 </html>
