--- a/10-rails-adv/labs/31-40/32-ajax-blog-commenting-demo/app/views/posts/show.html.erb
+++ b/10-rails-adv/labs/31-40/32-ajax-blog-commenting-demo/app/views/posts/show.html.erb
@@ -9,6 +9,6 @@
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
-<%= link_to 'Load Comments', post_comments_path(@post) %><br><br> 
+<%= link_to 'Load Comments', post_comments_path(@post), class: "load_comments" %><br><br> 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
