--- a/10-rails-adv/labs/31-40/32-ajax-blog-commenting-demo/app/views/posts/show.html.erb
+++ b/10-rails-adv/labs/31-40/32-ajax-blog-commenting-demo/app/views/posts/show.html.erb
@@ -11,7 +11,10 @@
 </p>
 <%= link_to 'Load Comments', post_comments_path(@post), class: "load_comments" %><br><br>
 
-<div class="comments"></div>
+<div class="comments">
+  <!-- added for json example  -->
+  <ul></ul>
+</div>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
