impl ajax request in rails using a generic request and remote true

--- a/10-rails-adv/labs/31-40/32-ajax-blog-commenting-demo/app/views/posts/show.html.erb
+++ b/10-rails-adv/labs/31-40/32-ajax-blog-commenting-demo/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
-<%= link_to 'Load Comments', post_comments_path(@post), class: "load_comments" %><br><br>
+<%= link_to 'Load Comments', post_comments_path(@post), remote: true, class: "load_comments" %><br><br>
 
 <div class="comments">
   <!-- added for json example  -->
